# funds

./: Anchor.toml  pnpm-lock.yaml
funds-ui/: package.json
programs/funds/: Cargo.toml
programs/funds/src/: lib.rs
programs/funds/src/instructions/: create_fund.rs  deposit.rs  mod.rs
programs/funds/src/state/: fund.rs
programs/funds/tests/: test_initialize.rs
